# glimpse-portal

./: .dockerignore  .env.example  .gitattributes  .gitignore  API_README.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  system.md
.github/workflows/: deploy-cf-worker.yml  deploy.yaml  deploy.yml
api/v1/: cache.py  resources.py  serializers.py  signals.py  urls.py  views.py
cf-worker/: Dockerfile  package-lock.json  package.json  wrangler.toml
cf-worker/src/: index.js
config/: celery.py  middleware.py  routers.py  settings.py  urls.py
portal/: admin.py  api_views.py  apps.py  dashboard.py  models.py  tasks.py  tests.py  urls.py  youtube.py
portal/live_feed/: __init__.py  manager.py  models.py  pipeline_manager.py  pipeline_sources.py  urls.py  views.py
portal/management/: __init__.py
portal/migrations/: 0001_initial.py  0002_alter_videos_publisher.py  0003_livefeedlog.py  0004_livefeedpipeline_and_logs.py  0005_livefeedpipeline_default_impact.py  0006_openaijob_openaijoblog.py  0007_livefeedpipeline_config.py  0008_add_category_config_and_published_items.py  0009_categories_name_en.py
portal/openai/: __init__.py  client.py  jobs.py
portal/templatetags/: live_feed_tags.py
rest-collection/: glimpse-api-gateway.postman_collection.json
scripts/: entrypoint.sh  minify-player.ps1
supabase/: admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py  youtube.py
supabase/migrations/: 0001_initial.py
templates/admin/: cache_dashboard.html  cf_analytics.html  custom_index.html  index.html  (+1 more)
(+18 files in other folders)
